# FisMedLab

./: D_vs_I.txt  D_vs_kVp (t=100ms).txt  README.md
DatiRX/: D_vs_I.py  D_vs_kVp (t=100ms).py  D_vs_kVp (t=50ms).txt  D_vs_t.py  D_vs_t.txt  FWHMdata.txt  HVL.py  HVL.txt  HVL_sim.txt  Riproducibilità.txt  ripr.py
Ottica_Gruppo1/: Risoluzione_B2_t05_f4.asc  Risoluzione_B4_t125_f4.asc  Risoluzione_B8_t0313_f4.asc  Risoluzione_buio_B2_t05_f4.asc  Risoluzione_buio_B4_t125_f4.asc  Risoluzione_buio_B8_t0313_f4.asc  binning_2.asc  binning_2_2.asc  binning_4.asc  binning_4_2.asc  binning_8.asc  binning_8_2.asc  soft_b2.asc  soft_b2_buio.asc  soft_b4.asc  soft_b4_buio.asc  soft_b8.asc  soft_b8_buio.asc
Plastici/: F1--V_108_CFD_80_22cm_ch34.txt  F1--V_108_CFD_80_40cm_ch34.txt  F1--V_110_CFD_80_22cm_ch34.txt  F1--V_112_CFD_80_22cm_ch34.txt  F1--V_112_CFD_80_40cm_ch34.txt  F1--V_114_CFD_80_22cm_ch34.txt  F1--V_116_CFD_20_22cm_ch34.txt  F1--V_116_CFD_30_22cm_ch34.txt  F1--V_116_CFD_40_22cm_ch34.txt  F1--V_116_CFD_50_22cm_ch34.txt  F1--V_116_CFD_60_22cm_ch34.txt  F1--V_116_CFD_70_22cm_ch34.txt  F1--V_116_CFD_80_12cm_ch12.txt  F1--V_116_CFD_80_12cm_ch34.txt  F1--V_116_CFD_80_16cm_ch12.txt  F1--V_116_CFD_80_16cm_ch34.txt  F1--V_116_CFD_80_20cm_ch12.txt  F1--V_116_CFD_80_20cm_ch34.txt  F1--V_116_CFD_80_22cm_ch34.txt  F1--V_116_CFD_80_24cm_ch12.txt  F1--V_116_CFD_80_24cm_ch34.txt  F1--V_116_CFD_80_28cm_ch12.txt  F1--V_116_CFD_80_28cm_ch34.txt  F1--V_116_CFD_80_32cm_ch12.txt  F1--V_116_CFD_80_32cm_ch34.txt  F1--V_116_CFD_80_36cm_ch12.txt  F1--V_116_CFD_80_36cm_ch34.txt  F1--V_116_CFD_80_40cm_ch12.txt  F1--V_116_CFD_80_40cm_ch34.txt  F1--V_116_CFD_80_4cm_ch12.txt  F1--V_116_CFD_80_4cm_ch34.txt  F1--V_116_CFD_80_8cm_ch12.txt  F1--V_116_CFD_80_8cm_ch34.txt  F1--V_116_CFD_90_22cm_ch34.txt  F1--V_118_CFD_80_22cm_ch34.txt  F1--V_120_CFD_80_22cm_ch34.txt  F1--V_120_CFD_80_40cm_ch34.txt  Scintillatori.ipynb
Silici/: 0.88.Chn  0.88.Spe  1.44.Chn  1.44.Spe  1.92.Spe  2.24.Spe  2.80.Spe  2.88_1k.Spe  2.88_1k_11.4pF.Chn  2.88_1k_11.4pF.Spe  2.88_1k_11.6pF.Chn  2.88_1k_4.4pF.Chn  2.88_1k_4.4pF.Spe  2.88_1k_6.9pF.Spe  2.88_1k_t2.Chn  2.88_1k_t2.Spe  2.88_1k_t3.Chn  2.88_1k_t3.Spe  2.88_500.Chn  2.88_500.Spe  3.04.Chn  3.04.Spe  (+12 more)
SimPlastici/: CMakeLists.txt  LAB2023.cc  input.mac  vis.mac
SimPlastici/include/: LabDetectorConstruction.hh  LabInfo.hh  LabRunAction.hh  LabSteppingAction.hh  common.hh
SimPlastici/src/: LabDetectorConstruction.cc  LabSteppingVerbose.cc
(+334 files in other folders)
